This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
7/3/23: Added entry for extra file suffixes in the Tilt Series Extra Output
dialog to replace having to use 'SuffixForExtraFile' command.

7/3/23: Fixed some problems finding holes in hex grids.

7/2/23: Stopped disabling the "Use Last IS vectors" button if not previously
defined or not at the same tilt angle as before.

7/2/23: Added an AutoIT compiled executable that is used to change aperture
size for systems where the UI automation fails to do so (Win 7, some Win 10).

7/2/23: When a single-channel JEOL STEM interface has multiple detectors, made
it initialize the proper interface if there is an appropriate
MappedToDSChannel or MutuallyExcludeDetectors property.

6/29/23: Got maximum exposure time from FEI camera and enforced it.

6/28/23: Added script commands to get dose-symmetric angles with current
settings and to modify them as long as the same reversals occur.

6/28/23: Added property to set number of spot sizes in STEM.

6/28/23: SEM_4-1-0beta17 (in testing)
6/28/23: Preliminary support added for new TFS UTAPI scripting interface,
which will allow proper aperture control (requiring at least server 7.16.1).

6/27/23: SEM_4-0-26
6/27/23: Fixed program getting stuck or crashing when spot intensity
calibration is canceled at one of the entry boxes (In 4.0).

6/27/23: Made JEOL's rotation angle be reasserted every time JEOL scope goes
back into STEM.

6/27/23: Changed UI Automation calls used to change aperture size, which fixed
problems on at least one Windows 10 scope.

6/27/23: Added DummyInstance property, changed program startup so it has same
effect as /DUMMY argument, added message box when trying to start a second
non-DUMMY instance.
