@@ -1069,10 +1069,12 @@
   </p>
     <p><a name="pythonInstall"<strong><em><strong>Installation options:</strong>&nbsp; </em></strong></a>There must be at least 
       one Python installation, but can be multiple ones.</p>
-    <p>The PythonModules package should be unpacked in the directory with the SerialEM 
+    <p>The PythonModules package should be obtained from the 
+      <a href = "http://bio3d.colorado.edu/SerialEM/download.html#PythonModules"> SerialEM download page</a> and 
+      unpacked in the directory with the SerialEM 
       executable; otherwise the property &#39;PythonModulePath&#39; must be defined with the 
       path to this directory of modules.&nbsp; This package contains modules for 
-      32-bit Python 2.7, 3.4, and 3.5, and 64-bit Python 3.4, 3.5, 3.6, 3.8, and 3.9.</p>
+      32-bit Python 2.7, 3.4, and 3.5, and 64-bit Python 3.4, 3.5, 3.6, 3.8, 3.9, and 3.11.</p>
     <p>If you have one Python on the system path that is 3.5 or higher, you are all 
       set.&nbsp; If you have multiple Pythons, Python is not on the system path, or 
       the version is 3.4 or 2.7, you must have one or more &#39;PathToPython&#39; property 
@@ -1083,6 +1085,7 @@
 &nbsp;&nbsp;&nbsp;&nbsp; PathToPython 3.6 C:\Program Files\Python36<br />
 &nbsp;&nbsp;&nbsp;&nbsp; PathToPython 3.8 C:\Program Files\Python38<br />
 &nbsp;&nbsp;&nbsp;&nbsp; PathToPython 3.9 C:\Program Files\Python39<br />
+&nbsp;&nbsp;&nbsp;&nbsp; PathToPython 3.11 C:\Program Files\Python311<br />
 &nbsp;&nbsp;&nbsp;&nbsp; PathToPython 2.7 C:\Program Files (x86)\Python27<br />
 &nbsp;&nbsp;&nbsp;&nbsp; PathToPython 3.4-32 C:\Program Files (x86)\Python34<br />
 &nbsp;&nbsp;&nbsp;&nbsp; PathToPython 3.5-32 C:\Program Files (x86)\Python35<br />
