@@ -31,6 +31,9 @@
       calibrations of rotation angle and pixel size (i.e., &#39;RotationAndPixel&#39; 
       properties entries) to allow the image shift to be translated accurately from 
       where it is measured to where it is used for acquisition.</P>
+      <p><b>Take image after shifting to position</b></p>
+      <P>Check this option to have an image taken automatically after shifting to each 
+        position.</P> 
     <P> <strong>Magnification to use</strong></P>
     <P> The choices here are the <strong>Current mag of area,</strong> the <strong>Mag 
       at which shifts were recorded</strong>, and a selected <strong>Other mag</strong>.&nbsp; 
@@ -41,7 +44,7 @@
       another magnification may impose a shift on the area unless the magnifications 
       are well-aligned.&nbsp; Since all positions are going to be visited, such a 
       shift is not an intrinsic problem, unless it prevents you from finding the first 
-      hole to be positioned at.&nbsp; Note that there automatic change in intensity 
+      hole to be positioned at.&nbsp; Note that there is no automatic change in intensity 
       when switching to a different magnification; you will need to make such changes 
       yourself.</P>
     <P> <strong>Change defocus offset to</strong></P>
